# vienna-live-mcp

./: .gitignore  AGENTS.md  ASSESSMENT.md  CLAUDE.md  DEPRECATED.md  INSTALL.md  README.md  env.example  glama.json  justfile  pyproject.toml  start.ps1  start.ps1.bak.20260508_202351
.cursor/rules/: architect.mdc
src/vienna_live_mcp/: __init__.py  mcpb_manifest.json  models.py  server.py  transport.py
src/vienna_live_mcp/portmanteaus/: __init__.py  expenses_manager.py  media_manager.py  planning_manager.py  shopping_manager.py  travel_manager.py
tests/: test_server.py
web_sota/: index.html  package-lock.json  package.json  start.ps1  tailwind.config.js  tsconfig.app.json  vite.config.ts
web_sota/src/: App.tsx
web_sota/src/common/: FleetCard.tsx  apps-catalog.ts
web_sota/src/components/layout/: app-layout.tsx  sidebar.tsx  topbar.tsx
web_sota/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  label.tsx  progress.tsx  scroll-area.tsx  tabs.tsx
web_sota/src/pages/: apps.tsx  chat.tsx  dashboard.tsx  expenses.tsx  media.tsx  planning.tsx  settings.tsx  shopping.tsx  status.tsx  tools.tsx  travel.tsx
